  (to be able use gem library if needed). (olandemarre)

2010-05-24
- include/config.h: USE_STOP_INSN_TO_FREE_HOST_CPU must be defined after
  TOS_VERSION since its definition depends on TOS_VERSION. (THH)

2010-05-25
- bios/memory.S: Improved memory detection which should now also work on a
  real STE (patch by Jean-Francois DEL NERO)

2010-05-27
- vdi/vdi_defs.h, vdi/vdi_tblit.S, vdi/vdi_text.c: Added a Vwk* parameter
  to text_blt() in order to be able to transmit it to act_siz(). Also fixed
  text_blt() for backuping the scratch registers when calling act_siz().
  (patch by Jean-Francois DEL NERO + vriviere)

2010-05-31
- Makefile: (vriviere)
   -> Replaced recursive calls to make by $(MAKE). Replaced -Xlinker by -Wl.
   -> Removed useless command chainings with the shell's ';'.
   -> Added UNIQUE initialization to avoid warnings when
      --warn-undefined-variables is used.
   -> Disabled the useless "Entering directory" messages, since the current
      directory is never changed.

2010-06-06
- desk/deskmain.c, aes/gemdisp.c, aes/geminit.c: Added some debug messages
  and the defines DBG_DESKMAIN, DBG_GEMDISP and DBG_GEMINIT. (vriviere)

2010-06-06
- aes/gemasm.S, aes/gemdosif.S, aes/gemstart.S, aes/gsx2.S, aes/large.S,
  bdos/rwa.S, bios/aciavecs.S, bios/bios.c, bios/cookie.h, bios/initinfo.c,
  bios/kprint.c, bios/kprintasm.S, bios/linea.S, bios/machine.c,
  bios/memory.S, bios/natfeat.S, bios/panicasm.S, bios/processor.S,
  bios/startup.S, bios/tosvars.S, bios/vectors.S, cli/coma.S, include/asm.h,
  include/config.h, util/memmove.S, util/memset.S, util/miscasm.S,
  util/nlsasm.S, util/stringasm.S, vdi/vdi_asm.S, vdi/vdi_raster.c,
  vdi/vdi_tblit.S: Added ColdFire V4e CPU support. (vriviere)
- Makefile: Added the COLDFIRE variable. Set it to 1 to build a ROM version
  compatible only with ColdFire V4e processors. (vriviere)

2010-06-13
- bios/bios.c, bios/initinfo.c, bios/initinfo.h:
  Clear the screen on reboot. (vriviere)